--- a/Code/main.ipynb
+++ b/Code/main.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "id": "2b904af4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Niworld\\AppData\\Local\\Temp\\ipykernel_19328\\1301542116.py:12: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
-      "  set_matplotlib_formats('svg', 'pdf') # For export\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pickle\n",
@@ -27,8 +18,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "from IPython.display import set_matplotlib_formats\n",
-    "set_matplotlib_formats('svg', 'pdf') # For export\n",
-    "from matplotlib.colors import to_rgba\n",
+    "# set_matplotlib_formats('svg', 'pdf') # For export\n",
     "import seaborn as sns\n",
     "sns.set_theme() \n",
     "\n",
@@ -38,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "id": "3893e0bb",
    "metadata": {},
    "outputs": [],
@@ -50,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "id": "11896871",
    "metadata": {},
    "outputs": [],
@@ -65,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "id": "4cab2449",
    "metadata": {},
    "outputs": [],
@@ -82,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "id": "dd1b23f5",
    "metadata": {},
    "outputs": [],
@@ -94,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "id": "0086b928",
    "metadata": {},
    "outputs": [],
@@ -113,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "id": "6346775a",
    "metadata": {},
    "outputs": [],
@@ -133,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "id": "68c5c581",
    "metadata": {},
    "outputs": [],
@@ -148,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "id": "8fc55c75",
    "metadata": {},
    "outputs": [],
@@ -162,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "id": "f7e7f9bd",
    "metadata": {},
    "outputs": [
@@ -172,13 +162,76 @@
        "744"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(load_charge())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c49f745c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "768"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(load_traffic())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c5ccb3b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "744"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(load_weather())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0792dced",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "744"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(load_RTP())\n"
    ]
   },
   {
@@ -1861,7 +1914,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "jupyter",
    "language": "python",
    "name": "python3"
   },
@@ -1875,7 +1928,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
