--- a/Code/main.ipynb
+++ b/Code/main.ipynb
@@ -325,7 +325,7 @@
     "        if (self.T) % (24*30) == 0:\n",
     "            self.done = True\n",
     "        \n",
-    "        return next_state, reward, self.done"
+    "        return next_state, reward, self.done, action_SOC"
    ]
   },
   {
@@ -1881,7 +1881,7 @@
     "        while not done:\n",
     "            #print(env.T)\n",
     "            action, prob, val = agent.choose_action(observation)\n",
-    "            observation_, reward, done = env.step(action)\n",
+    "            observation_, reward, done, true_action = env.step(action)\n",
     "            n_steps += 1\n",
     "            score += reward\n",
     "            agent.remember(observation, action, prob, val, reward, done)\n",
